# rdda_uarm_interface

./: CMakeLists.txt  README.md  package.xml
include/rdda_interface/: rdda_interface.h  shm.h  shm_data.h
msg/: JointStates.msg  RDDAPacket.msg
src/: test_node.cpp
src/rdda_interface/: rdda_interface.cpp  shm.c
